# something-bot

./: .dockerignore  .gcloudignore  .gitignore  BACKLOG.md  Dockerfile  README.md  SPEC.md  cron.yaml  main.py  pyproject.toml  requirements.txt  stuff.txt
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: _checks.yml  ci.yml  configure-telegram-bot.yml  daily-weather-qa.yml  deploy.yml  set-telegram-webhook.yml
channel/: channels_didyouknow.py  channels_vice.py
docs/: architecture.md  observability.md  postgres.md
docs/decisions/: 0001-bigquery-schema.md  0002-async-file-processing.md
fc/: crux_report.py  fincodata.py  google_analytics_query.py
infra/terraform/: .gitignore  .terraform.lock.hcl  .tflint.hcl  README.md  backend.tf  bigquery.tf  logging.tf  main.tf  outputs.tf  scheduler.tf  tf_infra.tfvars  variables.tf  versions.tf
infra/terraform/environments/: prod.tfvars
infra/terraform/scripts/: bootstrap-tfstate.sh
local-context/: README.md.example
reminders/: nastya_dinner.py
scripts/: .openai-context-bucket  context-sync.sh  grant_ga4_viewer.py  grant_gsc_refresh_token.py
src/something_really_bot/: __init__.py  commands.yaml  config.py  logging.py  main.py
src/something_really_bot/file_storage/: __init__.py  fetcher.py  gcs.py
src/something_really_bot/persistence/: __init__.py  bigquery.py  postgres.py  records.py
src/something_really_bot/routing/: command_registry.py  dispatcher.py  help_registry.py  types.py
src/something_really_bot/services/: job_history.py  jobs.py  openai_client.py  openai_context.py  pending_actions.py  scheduler_auth.py
src/something_really_bot/telegram/: client.py  models.py  parser.py  security.py
stuff_for_ira/: dyson.py  hellofresh.py  tiktok.py
tests/: conftest.py
tests/fixtures/telegram/: callback_query.json  channel_post_text.json  edited_message.json  group_command_with_bot_suffix.json  group_text.json  malformed_no_update_id.json  private_document.json  private_help_command.json  private_photo.json  private_start_command.json  private_text.json  private_voice.json  supergroup_text.json
tests/unit/: test_app.py  test_command_registry.py  test_config.py  test_dispatcher.py  test_help_registry.py  test_logging.py  test_parser.py  test_security.py  test_webhook_dispatch.py
tests/unit/features/: test_commands_handler.py  test_daily_digest_handler.py  test_daily_digest_sources.py  test_daily_message_handler.py  test_daily_weather_handler.py  (+18 more)
utils/: ai_response.py  commands.py  conversation.py  escape_shit.py  messages.py  reddit.py  reply.py  response.py  strings.py  telefunctions.py  update_handler.py  webscraper.py
(+86 files in other folders)
