[project]
name = "something-really-bot"
version = "0.1.0"
description = "Something Dashboard Telegram bot, rebuilt for Cloud Run."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "STX Group" }]
dependencies = [
    "fastapi>=0.136,<0.137",
    "google-auth>=2.30,<3",
    "google-cloud-bigquery>=3.41,<4",
    "google-cloud-storage>=3.10,<4",
    "httpx>=0.28,<0.29",
    "pydantic-settings>=2.14,<3",
    "uvicorn[standard]>=0.47,<0.48",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.15,<0.16",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/something_really_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
